Added bio and projects pages and linked them together.

--- a/bio.html
+++ b/bio.html
@@ -51,47 +51,8 @@
                 </nav>
             </header>
             <main role="main" class="container">
-                <h1 class="text-center fancy-title">ADAM DEELEY</h1>
-                <p class="text-center lead">Web Developer / Programmer</p>
-                <div id="projects" class="container-fluid h-100">
-                    <div id="projectCarousel" class="carousel slide border" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#projectCarousel" data-slide-to="1" class="active"></li>
-                            <li data-target="#projectCarousel" data-slide-to="1" class="active"></li>
-                            <li data-target="#projectCarousel" data-slide-to="2" class="active"></li>
-                            <li data-target="#projectCarousel" data-slide-to="3" class="active"></li>
-            
-                        </ol>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <a href="projects/project1.html">
-                                    <img class="d-block w-100" src="img/carousel/aroura.jpg" alt="First slide">
-                                </a>
-                            </div>
-                            <div class="carousel-item">
-                                <a href="projects/project2.html">
-                                    <img class="d-block w-100" src="img/carousel/blokes.jpg" alt="First slide">
-                                </a>
-                            </div>
-                            <div class="carousel-item">
-                                <a href="projects/project3.html">
-                                    <img class="d-block w-100" src="img/carousel/peas.jpg" alt="First slide">
-                                </a>
-                            </div>
-                            <div class="carousel-item">
-                                <a href="projects/project4.html">
-                                    <img class="d-block w-100" src="img/carousel/petersburg.jpg" alt="First slide">
-                                </a>
-                            </div>
-                            <a class="carousel-control-prev" href="#projectCarousel" role="button" data-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            </a>
-                            <a class="carousel-control-next" href="#projectCarousel" role="button" data-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+                <h1 class="text-center fancy-title">MY STORY SO FAR...</h1>
+                <p class="text-center lead">A little about my experience</p>
             </main>
             <footer class="footer">
                 <div class="container">
