--- a/bio.html
+++ b/bio.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Adam M Deeley">
         <link rel="icon" href="img/favicons/favicon.ico">
 
-        <title>Portfolio Proto</title>
+        <title>Adam Deeley</title>
 
         <!-- Bootstrap core CSS -->
         <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -35,6 +35,9 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="projects.html">Projects</a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="contact.html">Contact Me</a>
                             </li>
                         </ul>
                         <!-- To be implemented
