--- a/bio.html
+++ b/bio.html
@@ -29,7 +29,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                             </li>
-                            <li class="nav-item active">
+                            <li class="nav-item active text-success">
                                 <a class="nav-link" href="bio.html">Bio</a>
                             </li>
                             <li class="nav-item">
@@ -47,8 +47,8 @@
                     </div>
                 </nav>
             </header>
-            <main role="main" class="container">
-                <h1 class="text-center fancy-title">MY STORY SO FAR...</h1>
+            <main role="main" class="container w-75">
+                <h1 class="text-center fancy-title text-white">MY STORY SO FAR...</h1>
                 <p class="text-center lead">A little about my experience</p>
                 <p class="text-center">I am a passionate and dynamic self taught programmer, currently working as a Concierge Agent at a visa agency, where my innovations and programming endeavours have helped make my team the most profitable in the company. A large portion of my leisure time is devoted to soaking in new programming techniques and expanding my knowledge of frameworks and web technologies, along with designing platforming games. Building upon my experience, I am seeking a challenging and varied development role, with a longer term goal of progressing to a full-stack developer.</p>
             </main>
